[gd_scene load_steps=25 format=3 uid="uid://wee5jjpvgu41"]

[ext_resource type="Script" path="res://Scripts/Multiplayer/player.gd" id="1_hb32s"]
[ext_resource type="PackedScene" uid="uid://b4q8qwljtpi6q" path="res://Scenes/ak.tscn" id="3_rbrjc"]
[ext_resource type="Script" path="res://Scripts/Multiplayer/multiplayer_input.gd" id="4_g647o"]
[ext_resource type="Texture2D" uid="uid://ddvejmtuo8mtu" path="res://icon.svg" id="5_mrmgo"]
[ext_resource type="Texture2D" uid="uid://6jw240jy3fmc" path="res://Assets/Sprites/NormalCharacter.png" id="5_o3eks"]
[ext_resource type="PackedScene" uid="uid://cbo524uelxwvn" path="res://Scenes/gun.tscn" id="6_ulhye"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8sa75"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:direction")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:move_direction")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:gun_index")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_t4wiq"]
properties/0/path = NodePath("InputSynchronizer:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchronizer:input_move_direction")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_yjx5g"]
atlas = ExtResource("5_o3eks")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_be5fe"]
atlas = ExtResource("5_o3eks")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p51vv"]
atlas = ExtResource("5_o3eks")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ayxa"]
atlas = ExtResource("5_o3eks")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71o8t"]
atlas = ExtResource("5_o3eks")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce5rh"]
atlas = ExtResource("5_o3eks")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o4f2"]
atlas = ExtResource("5_o3eks")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl7jq"]
atlas = ExtResource("5_o3eks")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxhp5"]
atlas = ExtResource("5_o3eks")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp0to"]
atlas = ExtResource("5_o3eks")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2lll4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjx5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_be5fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p51vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ayxa")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71o8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce5rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o4f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl7jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxhp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp0to")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_486c7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_is7bd"]
bg_color = Color(1, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_winmw"]
bg_color = Color(1.51131e-05, 0.99898, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwwfg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55d0o"]
bg_color = Color(0.997933, 0.997933, 0, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_hb32s")
gun = ExtResource("6_ulhye")
ak = ExtResource("3_rbrjc")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_8sa75")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_t4wiq")
script = ExtResource("4_g647o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_2lll4")
animation = &"run"
frame_progress = 0.764444

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_486c7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]

[node name="interact_image" type="TextureRect" parent="."]
visible = false
offset_left = -16.0
offset_top = -83.0
offset_right = 112.0
offset_bottom = 45.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_mrmgo")

[node name="player_name" type="Label" parent="."]
offset_left = -38.0
offset_top = -33.0
offset_right = 112.0
offset_bottom = -10.0
scale = Vector2(0.5, 0.5)
text = "PlayerName"
horizontal_alignment = 1

[node name="Reload" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 61.0
offset_right = 40.0
offset_bottom = 101.0

[node name="ColorRect" type="ColorRect" parent="Reload"]
layout_mode = 0
offset_left = -1.0
offset_top = -47.0
offset_bottom = -39.0

[node name="ReloadBar" type="ProgressBar" parent="Reload"]
clip_contents = true
layout_mode = 0
offset_left = -26.0
offset_top = -45.0
offset_right = 24.0
offset_bottom = -40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_is7bd")
step = 0.001
show_percentage = false

[node name="InputFrame" type="ColorRect" parent="Reload"]
layout_mode = 0
offset_left = -3.0
offset_top = -36.0
offset_right = 2.0
offset_bottom = -31.0
color = Color(0, 0.976471, 1, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RadiationProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
clip_contents = true
layout_mode = 1
offset_left = 40.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 20.0
theme_override_styles/fill = SubResource("StyleBoxFlat_winmw")
step = 1.0
fill_mode = 1
show_percentage = false

[node name="HPLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
offset_left = 10.0
offset_top = 2.5
offset_right = 50.0
offset_bottom = 25.5
text = "HP"

[node name="RadLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
offset_left = 150.0
offset_top = 2.5
offset_right = 190.0
offset_bottom = 25.5
text = "Rads"

[node name="HealthProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
clip_contents = true
layout_mode = 1
offset_left = 40.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_fwwfg")
theme_override_styles/fill = SubResource("StyleBoxFlat_is7bd")
step = 1.0
value = 100.0
show_percentage = false

[node name="XPProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
clip_contents = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_55d0o")
step = 1.0
show_percentage = false

[node name="XPText" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 63.0
text = "Level 1"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -219.0
offset_right = 60.0
offset_bottom = -19.0
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 2

[node name="QuestPanel" type="Panel" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestText" type="Label" parent="CanvasLayer/Control/QuestPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseQuestPanelButton" type="Button" parent="CanvasLayer/Control/QuestPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -31.0
offset_right = 29.0
grow_horizontal = 2
grow_vertical = 0
text = "CLOSE"

[node name="WarningRad" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 0
offset_left = 120.0
offset_top = 5.0
offset_right = 140.0
offset_bottom = 25.0
color = Color(1, 0.816859, 0.909463, 1)

[node name="PanelInventory" type="Panel" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="VBoxContainer" parent="CanvasLayer/Control/PanelInventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="CanvasLayer/Control/QuestPanel/CloseQuestPanelButton" to="." method="_on_close_quest_panel_button_pressed"]
